--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           </div>
           <div class="hero-image">
             <h1 class="mobile-name">Moïse <span>KOYE</span></h1>
-            <img src="/mosess.jpg" alt="Moïse Koye" loading="lazy" />
+            <img src="mosess.jpg" alt="Moïse Koye" loading="lazy" />
           </div>
         </div>
       </div>
@@ -182,7 +182,7 @@
         </h2>
         <div class="about-content">
           <div class="about-image">
-            <img src="/image0(1).jpeg" alt="Moïse Koye" loading="lazy" />
+            <img src="image0(1).jpeg" alt="Moïse Koye" loading="lazy" />
           </div>
           <div class="about-text">
             <p
