--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@ meet the needs of users and businesses."
         </h2>
     <div class="underline"></div>
     <div class="contact-cards">
-        <a href="/CV Koye Moîse.pdf" class="card" target="_blank">
+        <a href="CV Koye Moîse.pdf" class="card" target="_blank">
         <i class="fa-regular fa-file-pdf"></i>
             <p>Télécharger mon CV</p>
         </a>
